--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
